# SimuladorMRUA

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  README.txt  graficos.gp  run.sh  simulador.c
codigo/: simulador.c
gnuplot/: grafico.gp  graficos.gp
